# stepik_linux

./: .gitignore  .swp  Dockerfile  README copy.md  README.md  Vagrantfile  docker-compose.yml
m1/2.dynamic_loading/: Makefile
m1/dynamic_library/: CMakeLists.txt  Makefile  main  main.c  solution.c
m1/ex_1_dynamic_library/: main
m1/ex_2_dynamic_library/: CMakeLists.txt  Makefile  lib.c  lib.h  solution  solution.c
m1/l1/: CMakeLists.txt  Makefile  hello  main.c
m1/l_1_intro/: Makefile  hello  hello.c
m1/l_2_dynamic_loading/: Makefile  hello  hello.c  hello.h  main.c
m2/debuging/: Makefile  bug  bug.c  core  dirs
m2/files_dirs_links/: Makefile  (+4 more)
m3_homework/: CMakeLists.txt  Makefile  children_count  children_count.c  daemon  daemon.c  example.org  pid_tree  pid_tree.c  ppid  ppid.c  proc_list  proc_list.c
m3_processes/: CMakeLists.txt  Makefile  clon.c  clone
m4_homework/: CMakeLists.txt  Makefile  long_text_util  long_text_util.c  multiplexing  multiplexing.c  symbol_count  symbol_count.c
m4_homework/ex2/: Makefile  solution  solution.c  test  test.c
m4_homework/ex3/: solution  solution.c
m4_homework/ex4/: Makefile  solution  solution.c
m4_homework/ex5_shared_memory/: Makefile  shm_client  shm_client.c  shm_server.c  solution  solution.c  solution_server  solution_server.c
m4_inter_process_communication/: CMakeLists.txt  Makefile  ipc  ipc.c  pipe_example  pipe_example.c  signal  signal.c
m5_network/: CMakeLists.txt  Makefile  resolve  resolve.c  tcp  tcp.c  udp_client  udp_client.c
m6_getopt/: CMakeLists.txt  Makefile  getopt  getopt.c
(+18 files in other folders)
